--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,51 @@
-body {
+#body {
+    background-color: #171717;
+    color: white;
     width: 90%;
     margin: 0 auto;
 }
 #text {
     width: 100%;
     height: 50vh;
+    font-size: 2rem;
 }
+.container {
+    padding: 100px 0px;
+}
+.container .second {
+    display: block;
+    margin: 10px auto;
+}
+.container .second .form-control {
+    display: inline;
+    width: fit-content;
+}
+.fab {
+    font-size: 30px;
+    text-align: center;
+    text-decoration: none;
+    padding: 10px;
+    margin: 5px 2px;
+    border-radius: 50%;
+    display: inline;
+}
+.container .material-icons {
+    margin: 10px;
+    cursor: pointer;
+    font-family: 'Material Icons';
+    color: yellow;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 50px;  
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: 'liga';
+  }
