--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,15 @@
     padding: 100px 0px;
 }
 .container .second {
-    display: block;
-    margin: 10px auto;
+    display: inline-flex;
+    margin: 20px;
 }
 .container .second .form-control {
     display: inline;
     width: fit-content;
+}
+.container .second .speed {
+    margin: 15px;
 }
 .fab {
     font-size: 30px;
