--- a/styles.css
+++ b/styles.css
@@ -65,30 +65,33 @@ body a:hover {
 
 @media screen and (max-width: 426px) { 
     #body {
-        font-size: 4rem;
+        font-size: 1rem;
     }
     #text {
-        font-size: 4rem;
+        font-size: 2rem;
     }
     .container {
-        padding: 450px 0px;
+        padding: 70px 0px;
     }
     .container .second {
         display: block;
     }
     .container .second .form-control { 
-        font-size: 3rem;
+        font-size: 1rem;
     }
     .container .second .speed {
-        margin: 50px;
+        margin: 0px;
     }
     .container .material-icons {
-        font-size: 8rem;
+        font-size: 3rem;
+    }
+    .footer {
+        margin-top: 40px;
+        position: unset;
+        font-size: 0.9rem;
     }
     .fab {
-        font-size: 5rem;
-        position: absolute;
-        bottom: 3%;
-        margin: 0px;
+        font-size: 1.5rem;
+        position: unset;
     }
 }
